--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -41,7 +41,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
-                        android:background="@drawable/shape_corner"
+                        android:background="@color/white_gray"
                         android:fitsSystemWindows="true"
                         android:orientation="vertical"
                         android:padding="15dp">
