--- a/app/src/main/res/layout/forecast_layout.xml
+++ b/app/src/main/res/layout/forecast_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="15dp"
-    android:background="@drawable/shape_corner"
+    android:background="@color/white_gray"
     android:orientation="vertical">
 
     <TextView
