--- a/app/src/main/res/layout/suggestion_layout.xml
+++ b/app/src/main/res/layout/suggestion_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="15dp"
-    android:background="@color/white_gray"
+    android:background="@color/colorPrimary"
     android:orientation="vertical"
     android:padding="12dp">
 
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="生活建议"
-        android:textColor="@color/white_gray"
+        android:textColor="@color/colorAccent"
         android:textSize="20sp" />
 
     <TextView
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:lineSpacingExtra="3dp"
-        android:textColor="@color/white_gray" />
+        android:textColor="@color/a150" />
 
     <TextView
         android:id="@+id/txt_sport"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:lineSpacingExtra="3dp"
-        android:textColor="@color/white_gray" />
+        android:textColor="@color/a150" />
 
     <TextView
         android:id="@+id/txt_carWash"
@@ -36,5 +36,5 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:lineSpacingExtra="3dp"
-        android:textColor="@color/white_gray" />
+        android:textColor="@color/a150" />
 </LinearLayout>
