--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -13,7 +13,7 @@
         android:layout_height="25dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:background="@color/white_gray" />
+        android:background="@mipmap/host" />
 
     <TextView
         android:id="@+id/title_city"
